opam-version: "2.0"
name: "rpc_tk"
synopsis: "Generate TK GUI for interfaces declared with rpclib"
description: """
This library can generate a user-interface based on TK to interact with a
server implementing the given interface declared using the rpclib IDL. The rpc
function that will be used by the GUI for contacting the server has to be
specified.
"""
maintainer: "Gabor Igloi <gaborigloi@gmail.com>"
authors: "Gabor Igloi <gaborigloi@gmail.com>"
license: "CC0"
homepage: "https://github.com/gaborigloi/"
bug-reports: "https://github.com/gaborigloi/"
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
depends: [
  "labltk"
  "rpc"
]
