opam-version: "2.0"
name: "rpc_tk"
synopsis: "Generate TK GUI for interfaces declared with rpclib"
description: """
This library can generate a user-interface based on TK to interact with
the implementation of a given interface declared using rpclib's IDL.
"""
maintainer: "Gabor Igloi <gaborigloi@gmail.com>"
authors: "Gabor Igloi <gaborigloi@gmail.com>"
license: "CC0"
homepage: "https://github.com/gaborigloi/rpc_tk"
dev-repo: "git+https://github.com/gaborigloi/rpc_tk.git"
bug-reports: "https://github.com/gaborigloi/rpc_tk/issues"
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
depends: [
  "labltk"
  "md2mld"
  "rpclib"
]
